# union-find

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml
app-union-find/: CMakeLists.txt
app-union-find/src/: main.cpp
cmake/: Pipeline.cmake
tools/scripts/: run-20K.sh  run-2M.sh  run-700K.sh
union-find/: CMakeLists.txt
union-find-algs/: CMakeLists.txt
union-find-algs/include/: quick-find.h  quick-union.h  union-find.h  weighted-quick-union.h
union-find-algs/src/: quick-find.cpp  quick-union.cpp  union-find.cpp  weighted-quick-union.cpp
union-find-algs/test/: CMakeLists.txt
union-find-algs/test/include/: regression-golds.h  regression-inputs.h  union-find-tester.h
union-find-algs/test/src/: union-find-regression.cpp  union-find-test.cpp  union-find-tester.cpp
union-find-algs/test/test-data/: regression101.txt.gold  regression13.txt.gold  regression25.txt.gold  regression25_2.txt.gold  regression47.txt.gold  regression57.txt.gold  regression60.txt.gold  regression60_2.txt.gold  regression96.txt.gold  regression98.txt.gold
union-find/include/: quick-find.h  union-find.h
union-find/src/: quick-find.cpp  union-find.cpp
union-find/test/: CMakeLists.txt
union-find/test/include/: regression-golds.h  regression-inputs.h
union-find/test/src/: union-find-regression.cpp  union-find-test.cpp
